--- a/todo/todo.css
+++ b/todo/todo.css
@@ -54,32 +54,28 @@ body{
     min-height: 100vh;
 }
 
+.container h2{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    font-size: 2rem;
+    color: #2196F3;
+    font-weight: 700;
+}
+
 .todo-app{
     width: 100%;
-    max-width: 540px;
+    max-width: 600px;
     background: #fff;
-    margin: 100px auto 20px;
-    padding: 40px 30px 70px;
-    border-radius: 10px;
-}
-
-.todo-app h2{
-    color: #002765;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.todo-app h2 img{
-    width: 30px;
-    margin-left: 10px;
+    margin: 0 auto;
+    border-radius: 30px;
 }
 
 .row{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #edeef0;
+    background: #fff;
     border-radius: 30px;
     padding-left: 20px;
     margin-bottom: 25px;
@@ -90,28 +86,56 @@ input{
     border: none;
     outline: none;
     background: transparent;
-    padding: 10px;
-    font-weight: 14px;
+    padding: 15px;
+    font-weight: 300;
+    font-size: 25px;
+    color: gray;
 }
 
 button{
     border: none;
     outline: none;
-    padding: 16px 50px;
-    background:#ff5945;
+    padding: 20px 50px;
+    background:#2196F3;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
     border-radius: 40px;
 }
 
+#list-container{
+    display: flex;
+    flex-direction: column;
+    background-color:#d6e4ff;
+    padding: 0;
+}
+
 ul li{
+    word-wrap: anywhere;
     list-style: none;
+    margin: 0 auto;
+    width: 500px;
+    max-width: 500px;
+    min-height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
     font-size: 17px;
+    font-weight: 600;
+    margin-top: 20px;
     padding: 12px 8px 12px 50px;
     user-select: none;
     cursor: pointer;
     position: relative;
+    background-color: #ffffff;
+    color: #2196F3;
+   
+}
+
+.iconShare{
+    width: 40px;
+    color: #2196F3;
 }
 
 ul li::before{
@@ -123,12 +147,12 @@ ul li::before{
     background-image: url(../images/unchecked.png);
     background-size: cover;
     background-position: center;
-    top: 12px;
+    top: 23px;
     left: 8px;
 }
 
 ul li.checked{
-    color: #555;
+    color: #82c0f3;
     text-decoration: line-through;
 }
 
@@ -137,13 +161,10 @@ ul li.checked::before{
 }
 
 ul li span{
-    position: absolute;
-    right: 0;
-    top: 5px;
     width: 40px;
     height: 40px;
-    font-size: 22px;
-    color: #555;
+    font-size: 30px;
+    color: #2196F3;
     line-height: 40px;
     text-align: center;
     border-radius: 50%;
@@ -152,5 +173,12 @@ ul li span{
 ul li span:hover{
     background: #edeef0;
 }
+
+.lateralicons{
+    display: flex;
+    gap: 5px;
+    padding-left: 10px;
+}
+
 
 
